# saras_dev

./: .gitignore  CMakeLists.txt  README  README.md  TODO  paper.md  parameters.yaml
compile/: compileSaras.sh
doc/: .gitignore
input/: parameters.yaml
lib/: CMakeLists.txt
lib/boundary/: CMakeLists.txt  boundary.cc  boundary.h  dirichlet.cc  dirichletCC.cc  dirichletFC.cc  hotPlate.cc  hotPlateCC.cc  neumann.cc  neumannCC.cc  neumannFC.cc  periodic.cc  periodicCC.cc  periodicFC.cc
lib/field/: CMakeLists.txt  derivative.cc  derivative.h  differ.cc  differ.h  field.cc  field.h  plainSfield.cc  plainSfield.h  plainVfield.cc  plainVfield.h  plainsf.cc  plainsf.h  plainvf.cc  plainvf.h  sfield.cc  sfield.h  vfield.cc  vfield.h
lib/force/: CMakeLists.txt  buoyantForce.cc  coriolisForce.cc  force.cc  force.h  rotatingConv.cc
lib/grid/: CMakeLists.txt  grid.cc  grid.h
lib/initial/: CMakeLists.txt  channelRand.cc  channelSine.cc  initial.cc  initial.h  parabolicRandom.cc  sineRandom.cc  temperatureProfiles.cc  uniformRandom.cc
lib/io/: CMakeLists.txt  parser.cc  parser.h  probes.cc  probes.h  reader.cc  reader.h  tseries.cc  tseries.h  writer.cc  writer.h
lib/les/: CMakeLists.txt  les.cc  les.h  spiral.cc
lib/parallel/: CMakeLists.txt  mpidata.cc  mpidata.h  parallel.cc  parallel.h
lib/poisson/: CMakeLists.txt  poisson.cc  poisson.h  poisson2.cc  poisson3.cc  poisson_d2.cc  poisson_d3.cc
lib/timestep/: CMakeLists.txt  eulerCN_d2.cc  eulerCN_d3.cc  timestep.cc  timestep.h
output/: .gitignore  cleanUp.sh  postProcess.py  time_plot_dyn.py  time_series_plot_hydro.py  time_series_plot_scalar.py
output/postProcessors/: cutter.py  image.py  inter_Col.py  inter_Stag.py  proRestrict.py
postProcess/: inter_Stag.py  proRestrict.py
src/: CMakeLists.txt
src/solvers/: CMakeLists.txt  main.cc
src/solvers/hydro/: hydro.cc  hydro.h  hydro2.cc  hydro3.cc  hydro_d2.cc  hydro_d3.cc
src/solvers/scalar/: scalar.cc  scalar.h  scalar_d2.cc  scalar_d3.cc
src/solvers/thermal/: thermal.cc  thermal.h  thermal2.cc  thermal3.cc
src/tests/: CMakeLists.txt  main.cc
src/tests/global/: unittest.cc  unittest.h
src/tests/units/: alltests.h  differ_test.cc  field_test.cc  hydro_test.cc  nlin_test.cc  poisson_test.cc
tests/: testChannel.sh  testLDC.sh  testPoisson.sh  testSaras.sh
tests/channelTest/: checkChannel.py
tests/channelTest/input/: parameters.yaml
tests/ldcTest/: checkLDC.py  validate_ldc.py
tests/ldcTest/input/: parameters.yaml
tests/mgTest/input/: parameters.yaml
